HS-1046: Implement Node Inheritance for different types of nodes