@@ -3,12 +3,11 @@ package org.opennms.horizon.inventory.service;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.opennms.horizon.inventory.dto.IpInterfaceDTO;
 import org.opennms.horizon.inventory.mapper.IpInterfaceMapper;
 import org.opennms.horizon.inventory.model.IpInterface;
-import org.opennms.horizon.inventory.model.Node;
+import org.opennms.horizon.inventory.model.node.Node;
 import org.opennms.horizon.inventory.model.SnmpInterface;
 import org.opennms.horizon.inventory.repository.IpInterfaceRepository;
 import org.opennms.horizon.shared.utils.InetAddressUtils;
@@ -20,29 +19,39 @@ import lombok.RequiredArgsConstructor;
 @Service
 @RequiredArgsConstructor
 public class IpInterfaceService {
-    private final IpInterfaceRepository modelRepo;
+    private final IpInterfaceRepository repository;
 
     private final IpInterfaceMapper mapper;
 
+    public void saveIpInterface(String tenantId,  Node node, String ipAddress) {
+        IpInterface ipInterface = new IpInterface();
+        ipInterface.setNode(node);
+        ipInterface.setTenantId(tenantId);
+        ipInterface.setIpAddress(InetAddressUtils.getInetAddress(ipAddress));
+        ipInterface.setSnmpPrimary(true);
+        repository.save(ipInterface);
+        node.getIpInterfaces().add(ipInterface);
+    }
+
     public List<IpInterfaceDTO> findByTenantId(String tenantId) {
-        List<IpInterface> all = modelRepo.findByTenantId(tenantId);
+        List<IpInterface> all = repository.findByTenantId(tenantId);
         return all
             .stream()
             .map(mapper::modelToDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Optional<IpInterfaceDTO> getByIdAndTenantId(long id, String tenantId) {
-        return modelRepo.findByIdAndTenantId(id, tenantId).map(mapper::modelToDTO);
+        return repository.findByIdAndTenantId(id, tenantId).map(mapper::modelToDTO);
     }
 
     public Optional<IpInterfaceDTO> findByIpAddressAndLocationAndTenantId(String ipAddress, String location, String tenantId) {
-            Optional<IpInterface> optional = modelRepo.findByIpAddressAndLocationAndTenantId(InetAddressUtils.getInetAddress(ipAddress), location, tenantId);
+            Optional<IpInterface> optional = repository.findByIpAddressAndLocationAndTenantId(InetAddressUtils.getInetAddress(ipAddress), location, tenantId);
             return optional.map(mapper::modelToDTO);
     }
 
     public void creatUpdateFromScanResult(String tenantId, Node node, IpInterfaceResult result, Map<Integer, SnmpInterface> ifIndexSNMPMap) {
-        modelRepo.findByNodeIdAndTenantIdAndIpAddress(node.getId(), tenantId, InetAddressUtils.getInetAddress(result.getIpAddress()))
+        repository.findByNodeIdAndTenantIdAndIpAddress(node.getId(), tenantId, InetAddressUtils.getInetAddress(result.getIpAddress()))
             .ifPresentOrElse(ipInterface -> {
                 ipInterface.setHostname(result.getIpHostName());
                 ipInterface.setNetmask(result.getNetmask());
@@ -50,7 +59,7 @@ public class IpInterfaceService {
                 if(snmpInterface != null) {
                     ipInterface.setSnmpInterface(snmpInterface);
                 }
-                modelRepo.save(ipInterface);
+                repository.save(ipInterface);
             }, () -> {
                 IpInterface ipInterface = mapper.fromScanResult(result);
                 ipInterface.setNode(node);
@@ -61,7 +70,7 @@ public class IpInterfaceService {
                 if(snmpInterface != null) {
                     ipInterface.setSnmpInterface(snmpInterface);
                 }
-                modelRepo.save(ipInterface);
+                repository.save(ipInterface);
             });
     }
 }
